Patch uni_links compileSdk and disable shrinking; revert smart_auth dependency

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,9 +23,9 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.app"
-    compileSdk 34
-    ndkVersion flutter.ndkVersion 
+    namespace "com.dohatecca.esign"
+    // compileSdk 34 -> updated to 35 to satisfy plugin requirements
+    compileSdk 35
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -42,11 +42,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.app"
+        applicationId "com.dohatecca.esign"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -56,15 +56,22 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            // disable code shrinking to avoid R8 missing-class errors
+            minifyEnabled false
+            shrinkResources false
         }
     }
+
 }
 
 flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    // Google Play services auth for smart_auth plugin
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+}
 
 android {                                                                                     
     defaultConfig {                                                                             
